--- a/tex/HTML5WithDart.tex
+++ b/tex/HTML5WithDart.tex
@@ -1,5 +1,5 @@
-\documentclass[12pt]{book}
-\usepackage[width=4.375in, height=7.0in, top=1.0in, papersize={5.5in,8.5in}]{geometry}
+\documentclass[10pt]{book}
+\usepackage[width=4.375in, height=7.0in, top=1.0in, bottom=0.7in, papersize={5.5in,7.0in}]{geometry}
 \usepackage[pdftex]{graphicx}
 \usepackage{amsmath}
 \usepackage{amssymb}
@@ -10,6 +10,7 @@
 %\usepackage{array}
 %\usepackage{xy}
 \usepackage{fancyhdr}
+\usepackage{lipsum}
 
 \pagestyle{fancy}
 \renewcommand{\chaptermark}[1]{\markboth{#1}{}}
@@ -34,29 +35,124 @@
 \begin{document}
 \frontmatter
 %
-\chapter*{\Huge \center New Metaphysics }
+\chapter*{\Huge \center HTML5 with Dart }
 \thispagestyle{empty}
 %{\hspace{0.25in} \includegraphics{./ru_sun.jpg} }
-\section*{\huge \center Suresh Emre}
+\section*{\huge \center Create HTML5 Applications With Dart}
+\section*{\small \center by Jose Angel Espinoza Portillo @OnlyAngel }
 \newpage
-\subsection*{\center \normalsize Copyright \copyright 2009 by Suresh Emre}
-\subsection*{\center \normalsize All rights reserved.}
+\subsection*{\center \normalsize \copyright Jose Angel Espinoza Portillo 2013 }
+\subsection*{\center \normalsize Some rights reserved. No part of this publication may be reproduced, stored in a retrieval system or transmitted in any form or by any means, electronic, mechanical or photocopying, recording, or otherwise for commercial purposes without the prior permission of the publisher.
+HTML5 With Dart by Jose Angel Espinoza Portillo is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License. Based on a work at https://github.com/onlyangel/HTML5WithDart.}
 \subsection*{\center \normalsize ISBN \dots}
 \subsection*{\center \normalsize \dots Publications}
 %
-\chapter*{\center \normalsize To my Son}
+\newpage
+\subsection*{\center \normalsize To Norita}
+%
+\chapter{Preface}
+\lipsum[1]
+\section{Reason of the existence of this Book}
+\lipsum[2]
+\section{Licences}
+\lipsum[3]
+\section{Code}
+\lipsum[4]
+\section{Subscription}
+\lipsum[5]
+\section{How should read these book}
+\lipsum[6]
 %
 \tableofcontents
 %
 \mainmatter
 %
-\chapter{Subjectivation and Objectivation}
+\part{What is Dart?}
+\chapter{Introduction}
 % your text here
-In human history no philosopher or sage explained the cosmic mystery and the spiritual reality more rationally than Shrii Shrii Anandamurti (1921-1990) \cite{baba_books} \cite{anandamitra}. His rational outlook is truly inspiring.
+\lipsum[7]
+\section{About Dart}
+\lipsum[8]
+\subsection{Origin  (history)}
+\lipsum[9]
+\subsection{Chrome vs v8}
+\lipsum[10]
+\subsection{faster that v8}
+\lipsum[11]
+\section{Characteristics}
+\lipsum[12]
+\subsection{j2js}
+\lipsum[13]
+\section{Browser support}
+\lipsum[14]
+\section{Tools}
+\lipsum[15]
+\subsection{Editor}
+\lipsum[16]
+
 %
-\chapter{Description of the Principle}
-% your text here
-%
+\chapter{The actual language}
+\lipsum[16]
+
+\section{Parts of a script}
+\lipsum[17]
+\subsection{code}
+\lipsum[18]
+
+\section{Var types}
+\lipsum[19]
+\subsection{code}
+\lipsum[20]
+
+\section{Classes}
+\lipsum[21]
+\subsection{Instance Variables}
+\lipsum[22]
+\subsection{Constructors}
+\lipsum[23]
+\subsection{Metodos}
+\lipsum[24]
+
+\section{Operators}
+\lipsum[25]
+\subsection{code}
+\lipsum[26]
+
+\section{Flow management}
+\lipsum[27]
+\subsection{if else}
+\lipsum[28]
+\subsection{for}
+\lipsum[29]
+\subsection{do while}
+\lipsum[30]
+\subsection{break?}
+\lipsum[31]
+\subsection{switch case}
+\lipsum[32]
+
+\section{Exception}
+\lipsum[33]
+\subsection{Try}
+\lipsum[34]
+\subsection{catch}
+\lipsum[35]
+\subsection{Finally}
+\lipsum[36]
+
+\section{Futures}
+\lipsum[37]
+\subsection{code}
+\lipsum[38]
+\subsection{Comleter}
+\lipsum[39]
+
+\section{Isolates}
+\lipsum[40]
+\subsection{code}
+\lipsum[41]
+
+
 \chapter{Creation of Cosmos as Objectivation}
 % your text here
 %
