--- a/tex/HTML5WithDart.tex
+++ b/tex/HTML5WithDart.tex
@@ -4,6 +4,7 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{tipa}
+\usepackage{listings}
 %\usepackage{txfonts}
 \usepackage{textcomp}
 %\usepackage{amsthm}
@@ -52,8 +53,11 @@ HTML5 With Dart by Jose Angel Espinoza Portillo is licensed under a Creative Com
 %
 \chapter{Preface}
 \lipsum[1]
+\lstinputlisting[language=Java]{code/test01.dart}
+\lipsum[1]
 \section{Reason of the existence of this Book}
 \lipsum[2]
+
 \section{Licences}
 \lipsum[3]
 \section{Code}
@@ -78,6 +82,8 @@ HTML5 With Dart by Jose Angel Espinoza Portillo is licensed under a Creative Com
 \subsection{Chrome vs v8}
 \lipsum[10]
 \subsection{faster that v8}
+\lipsum[11]
+\subsection{More than a language}
 \lipsum[11]
 \section{Characteristics}
 \lipsum[12]
@@ -140,40 +146,30 @@ HTML5 With Dart by Jose Angel Espinoza Portillo is licensed under a Creative Com
 \subsection{Finally}
 \lipsum[36]
 
-\section{Futures}
-\lipsum[37]
-\subsection{code}
-\lipsum[38]
-\subsection{Comleter}
-\lipsum[39]
 
-\section{Isolates}
+\section{Libraries}
+\lipsum[37]
+\subsection{Core}
+\lipsum[37]
+\subsection{Convert}
+\lipsum[37]
+\subsection{Html}
+\lipsum[37]
+\subsection{Async}
+\lipsum[38]
+\subsubsection{Futures}
+\lipsum[39]
+\subsection{Isolates}
 \lipsum[40]
-\subsection{code}
+\subsubsection{code}
 \lipsum[41]
 
 
-\chapter{Creation of Cosmos as Objectivation}
-% your text here
-%
-\chapter{More on Cosmic Subjectivation}
-% your text here
-%
-\chapter{More on Multiplicity}
-% your text here
-%
-\chapter{Curvature}
-% your text here
-%
-chapter{Action-Reaction Principle}
-% your text here
-%
-\chapter{Creation of the Physical Universe}
-% your text here
-%
-\chapter{An Example from the Later Stages}
-% your text here
-%
+\section{Pub}
+
+\section{angular.dart}
+
+
 \backmatter
 %
 \begin{thebibliography}{99}
