Changes in the order of the parts

--- a/tex/HTML5WithDart.tex
+++ b/tex/HTML5WithDart.tex
@@ -52,20 +52,13 @@ HTML5 With Dart by Jose Angel Espinoza Portillo is licensed under a Creative Com
 \subsection*{\center \normalsize To Norita}
 %
 \chapter{Preface}
-\lipsum[1]
 \lstinputlisting[language=Java]{code/test01.dart}
-\lipsum[1]
 \section{Reason of the existence of this Book}
-\lipsum[2]
 
 \section{Licences}
-\lipsum[3]
 \section{Code}
-\lipsum[4]
 \section{Subscription}
-\lipsum[5]
 \section{How should read these book}
-\lipsum[6]
 %
 \tableofcontents
 %
@@ -73,111 +66,148 @@ HTML5 With Dart by Jose Angel Espinoza Portillo is licensed under a Creative Com
 %
 \part{What is Dart?}
 \chapter{Introduction}
-% your text here
-\lipsum[7]
 \section{About Dart}
-\lipsum[8]
 \subsection{Origin  (history)}
-\lipsum[9]
 \subsection{Chrome vs v8}
-\lipsum[10]
 \subsection{faster that v8}
-\lipsum[11]
 \subsection{More than a language}
-\lipsum[11]
 \section{Characteristics}
-\lipsum[12]
 \subsection{j2js}
-\lipsum[13]
 \section{Browser support}
-\lipsum[14]
 \section{Tools}
-\lipsum[15]
 \subsection{Editor}
-\lipsum[16]
 
-%
 \chapter{The actual language}
-\lipsum[16]
+Here I will explain the language
 
-\section{Parts of a script}
-\lipsum[17]
-\subsection{code}
-\lipsum[18]
+\section{Dart Basics}
+Here it come the basic part of the Dart language
 
-\section{Var types}
-\lipsum[19]
-\subsection{code}
-\lipsum[20]
+\section{Comments}
+Here I will explain the dart comment "paradigma"
+\subsection{Line}
+I Will explain the single line comments
+\subsection{Multiline}
+I will explain the multi line comments
 
+%VARIABLES SECTION
+\section{Variables \& Operations}
+Variables are cool. Are even cooler when you usethem correctly. And don't get me started for operations.
+
+\subsection{Basic Operations}
+\subsubsection{Asigment}
+yes im talking about equality
+\subsubsection{Asert}
+Yes these is an asert 
+\subsection{Type of Variables}
+\subsubsection{Numbers}
+Number Variables are awesome, make me remember math and stuf.
+\subsubsection{Booleans}
+Boolean Variables are super cool. Just thing that is true is true and what is false is false.
+\subsubsection{String}
+Compared with both kind of variables previous to these. These is not that sexy. But is prety dammed usefull.
+\subsubsection{String Operations}
+And yes the Strings has its own operations section.
+\subsubsection{Lists}
+The lists are a kind of array but made Object and with all kind of extras. Pretty usefull too.
+\subsubsection{Maps}
+The headache of most languages efficiently speaking. These is not a problem for Dart =D.
+
+% the ifs elses and all that stuff
+\section{Flow Management Operations}
+\subsubsection{conditionals}
+the conditionals
+\subsubsection{loops}
+the loops
+%\subsection{if else}
+%\subsection{for}
+%\subsection{do while}
+%\subsection{break?}
+%\subsection{switch case}
+
+
+
+% Dont get me started with functiosn. Ok well lests start
+\section{Functions}
+Here I will explain what a function is.
+\subsection{main()}
+Main the Alpha of a Dart Application.
+\subsection{The parameters}
+Yes we use parameters and the parameters were before the HTML parameters.
+\subsubsection{Default Values}
+At the begining there was parameter, and after there exists the Default Values for Parameters
+\subsubsection{Optional Parameters}
+The roumors says that there are Optional Parameters behid those cool walls. Said the JS script.
+\subsubsection{Named Optional Parameters}
+And the callback JS method respond. Yes and some of them have names.
+\subsubsection{Positional Params}
+And the Dart came and show them the rigth order and position of the correct function calling.
+\subsection{Function Operations}
+The functions are so convenient that it even have it own Operations section.
+\subsubsection{As an Object}
+Yes you can have an object that represents a function and pass it as a parameter (YES A FUNCTION SENDED AS A PARAMETER OF OTHER FUNCTION, isn't that weird? But convenient).
+\subsubsection{Closures}
+Yeah! that Closures Thingi.
+\subsubsection{ $=>$ }
+Super fast way of, avoid type the keys.
+
+%Classes
 \section{Classes}
-\lipsum[21]
-\subsection{Instance Variables}
-\lipsum[22]
-\subsection{Constructors}
-\lipsum[23]
-\subsection{Metodos}
-\lipsum[24]
+\subsection{Members}
+(public variables)
+\subsection{Class constructor}
+And is not the guy that build the class. Or not exactly.
+\subsubsection{Initializa list}
+These wier animal
+\subsubsection{Calling constructors}
+Constructors callis other consturctors these is an bussiness now.
+\subsection{Access Variables}
+how to access variables 
+\subsection{get and set}
+Getters and Setters
+\subsection{mixins}
+\subsection{Operations with classes}
 
-\section{Operators}
-\lipsum[25]
-\subsection{code}
-\lipsum[26]
-
-\section{Flow management}
-\lipsum[27]
-\subsection{if else}
-\lipsum[28]
-\subsection{for}
-\lipsum[29]
-\subsection{do while}
-\lipsum[30]
-\subsection{break?}
-\lipsum[31]
-\subsection{switch case}
-\lipsum[32]
-
-\section{Exception}
-\lipsum[33]
-\subsection{Try}
-\lipsum[34]
-\subsection{catch}
-\lipsum[35]
-\subsection{Finally}
-\lipsum[36]
-
-
+%libraries
 \section{Libraries}
-\lipsum[37]
-\subsection{Core}
-\lipsum[37]
-\subsection{Convert}
-\lipsum[37]
-\subsection{Html}
-\lipsum[37]
-\subsection{Async}
-\lipsum[38]
+yes Libraries
+\subsection{Make your own}
+You can do it
+\subsection{how to call them}
+Hey you library come here
+\subsubsection{Prefixes}
+a prefix
+\subsubsection{Partial Import}
+Just you and you come here
+\subsection{Included Libraries}
+The libraries from dart
+\subsubsection{Core}
+The core
+\subsubsection{Convert}
+Convertion tools
+\subsubsection{Html}
+All the subject of the se book
+\subsubsection{Async}
+How to call remote stuff
 \subsubsection{Futures}
-\lipsum[39]
-\subsection{Isolates}
-\lipsum[40]
-\subsubsection{code}
-\lipsum[41]
+Great functionality
+\subsubsection{Isolates}
+Mutli proceses
+\subsection{pub.dartlang.org}
+More stuff for free
+\subsection{angular.dart}
+Like Angular.js but with Dart
+\subsection{and the list goes on and on}
+Much more stuff for free
 
-
-\section{Pub}
-
-\section{angular.dart}
 
 
 \backmatter
 %
 \begin{thebibliography}{99}
-\bibitem{baba_books}
-Books of Shrii Shrii Anandamurti (Prabhat Ranjan Sarkar): \\
-http://shop.anandamarga.org/
-\bibitem{anandamitra}
-Avtk. Ananda Mitra Ac., \emph{The Spiritual Philosophy of Shrii Shrii Anandamurti: A Commentary on Ananda Sutram}, Ananda Marga Publications (1991) \\
-ISBN: 81-7252-119-7
+\bibitem{dartlang.org}
+The official dart website
+http://www.dartlang.org/
+
 \end{thebibliography}
 \end{document}
